# eagle

./: .gitignore  README.md  TODO.md  docker-compose.yml
backend/: .env.example  .gitignore  README.md  eagle-backend.spec  hook_ssl_certs.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_project_folder_path.py  99c6c81aed9f_add_trigger_source_and_llm_raw_output.py  b3e8f2a91c05_add_phone_email_to_candidates.py
backend/app/: auth.py  config.py  database.py  main.py
backend/app/agents/: coordinator.py  evaluator.py  research.py  tools.py
backend/app/api/: __init__.py  candidates.py  conversations.py  deps.py  errors.py  evaluations.py  health.py  ontology.py  preferences.py  projects.py  research.py  settings.py  ws_bootstrap.py
backend/app/models/: __init__.py  candidate.py  conversation_log.py  embedding.py  preference_log.py  project.py  project_candidate.py  project_research.py  skill_ontology.py
backend/app/schemas/: candidate.py  conversation.py  evaluation.py  ontology.py  preference.py  project.py  research.py
backend/app/services/: __init__.py  candidate_service.py  chroma_service.py  confidence_service.py  conversation_service.py  embedding_service.py  evaluation_service.py  lancedb_service.py  llm_client.py  ontology_service.py  preference_service.py  project_service.py  research_service.py  search_service.py
backend/app/utils/: logger.py  paths.py
docs/: PRD.md  api.md  data_schema.md  linkedin_sample.html  pipeline.md  tech.md
extension/: README.md  package.json  pnpm-lock.yaml  (+1 more)
(+111 files in other folders)
