[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "anthropic>=0.86.0",
    "chromadb>=1.5.5",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "langfuse>=4.0.6",
    "loguru>=0.7.3",
    "openai>=2.30.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "send2trash>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "tqdm>=4.67.3",
    "uvicorn>=0.42.0",
]
